# tryit-2021-weather-bot

cdk/: .gitignore  README.md  package-lock.json  package.json
cdk/lib/: deploy-stage.ts  weather-bot-stack.ts
cdk/stages/: stage.json.example
lib/: .gitignore  bot.py  poll_bot.py  pyproject.toml  util.py  weather_api.py  webhook_bot.py
lib/database/: __init__.py  database.py  dynamo.py  model.py
